Fix fullscreen gallery on mobile

--- a/src/app/pages/status/status.page.scss
+++ b/src/app/pages/status/status.page.scss
@@ -50,7 +50,7 @@
         max-height: 600px;
     }
 
-    .custom-gallery-browser {
+    .custom-gallery-with-icons {
         width: calc(100vw - 80px);
     }
 
